2003-10-17  Bastien Nocera  <hadess@hadess.net>

	* src/totem-private.h:
	* src/totem-statusbar.c: (totem_statusbar_update_time),
	(totem_statusbar_set_time), (totem_statusbar_timeout_pop),
	(totem_statusbar_push), (totem_statusbar_pop):
	* src/totem-statusbar.h:
	* src/totem.c: (totem_action_error), (on_buffering_event):
	remove the buffering dialog, and use the statusbar for buffering
	status as not all buffers are filled when just opening a stream
	for example

============ Version 0.99.7

2003-10-15  Bastien Nocera  <hadess@hadess.net>

	* README: upd
	* configure.in: 0.99.7

2003-10-14  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c: (frame_output_cb),
	(bacon_video_widget_realize), (bacon_video_widget_set_fullscreen):
	take into account the return value from bacon_resize_init before
	calling bacon_resize itself

2003-10-13  Bastien Nocera  <hadess@hadess.net>

	* README: upd
	* src/totem-pl-parser.c: (totem_pl_parser_add_m3u),
	(parse_asx_entry): fix parsing of m3u and asx playlists

2003-10-13  Bastien Nocera  <hadess@hadess.net>

	* README: updated

2003-10-13  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_seek_relative): the function expects
	seconds and we were passing milliseconds, fixes seeking with the
	arrows

2003-10-13  Bastien Nocera  <hadess@hadess.net>

	* configure.in: enable HAVE_GNOME_DESKTOP by default in our
	application
	* src/bacon-video-widget-xine.c: 
	(bacon_video_widget_set_proprietary_plugins_path): add
	/usr/lib/RealPlayer9/Codecs/ as a possible path for Realplayer codecs
	* src/totem-pl-parser.c: (totem_pl_parser_write),
	(totem_pl_parser_add_pls), (totem_pl_parser_add_desktop): fix
	.pls reading and writing (damn), fix .desktop parsing
	* src/totem-playlist.c: (totem_playlist_error),
	(totem_playlist_save_current_playlist): add an error message
	when we couldn't save the playlist
	* src/totem.c: (totem_action_error): escape the url for display
	before showing it in the error message
